# pkgoci

./: Cargo.toml  README.md  _config.yml  build.rs
.github/workflows/: ci.yml
bench/: bench.sh
blog/: 2026-07-17-introducing-pkgoci.md
examples/jq/: Pkgocifile
examples/kubernetes/: Pkgocifile
examples/kubernetes-cni/: Pkgocifile
examples/lua/: Pkgocifile
examples/ninja/: Pkgocifile
examples/sqlite/: Pkgocifile
examples/xz/: Pkgocifile
examples/zstd/: Pkgocifile
go/: go.mod  go.sum  main.go
src/: cellar.rs  commands.rs  config.rs  extract.rs  main.rs  oci.rs  pkgocifile.rs  platform.rs  registry.rs  rekor.rs  resolve.rs  sandbox.rs  sign.rs
