[package]
name = "pkgoci"
version = "0.1.0"
edition = "2021"
description = "Fast, native package manager backed by OCI registries (Docker Hub by default)"
license = "BSD-2-Clause"
repository = "https://github.com/ecurtin/pkgoci"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
ruzstd = "0.8"
tar = "0.4"
dirs = "5"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
