[package]
name = "pkgoci"
version = "0.1.0"
edition = "2021"
description = "Fast, native package manager backed by OCI registries (Docker Hub by default)"
license = "Apache-2.0"
repository = "https://github.com/ecurtin/pkgoci"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
ruzstd = "0.8"
tar = "0.4"
dirs = "5"
ureq = { version = "2", features = ["json"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand = "0.8"
semver = "1"
pubgrub = "0.2"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_AppLocker",
    "Win32_System_Threading",
] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
